# balancing_robot

./: CMakeLists.txt
main/: CMakeLists.txt  ComponentHandler.cpp  ConfigurationTask.cpp  LEDCPWMManager.cpp  Logger.cpp  MPU6050Manager.cpp  MotorControlTask.cpp  MotorDriver.cpp  PIDController.cpp  PIDTask.cpp  RuntimeConfig.cpp  SensorTask.cpp  StateMachine.cpp  TelemetryTask.cpp  WebServer.cpp  WiFiManager.cpp  main.cpp  mpu6050.cpp
main/HardwareAbstractionLayer/: CMakeLists.txt  GPIO.cpp  I2CBus.cpp  I2CDevice.cpp  L298NMotor.cpp  LEDCPWM.cpp  LEDCPWMManager.cpp  LEDCTimer.cpp  MCPWMManager.cpp  MCPWMTimer.cpp  MPU6050.cpp  MX1616HMotor.cpp  WiFiManager.cpp
main/HardwareAbstractionLayer/include/: ConfigTypes.hpp  GPIO.hpp  I2CBus.hpp  I2CDevice.hpp  L298NMotor.hpp  LEDCPWM.hpp  LEDCPWMManager.hpp  LEDCTimer.hpp  MCPWM.hpp  MCPWMManager.hpp  MCPWMTimer.hpp  MPU6050.hpp  MX1616HMotor.hpp  WiFiManager.hpp
main/HardwareAbstractionLayer/interface/: IAccelerometer.hpp  IGPIO.hpp  IHalComponent.hpp  II2CBus.hpp  II2CDevice.hpp  ILEDCTimer.hpp  IMPU6050.hpp  IMotor.hpp  IPWM.hpp
main/HardwareManager/: CMakeLists.txt  HardwareManager.cpp  I2CBus.cpp  LEDCPWMManager.cpp  MPU6050.cpp  MX1616HMotor.cpp  NVS.cpp
main/HardwareManager/Components/: I2CBus.cpp  I2CDevice.cpp  LEDCPWM.cpp  MPU6050.cpp  WIFIController.cpp
main/HardwareManager/Components/Include/: I2CBus.hpp  L298NMotor.hpp  LEDCTimer.hpp  MPU6050.hpp  MX1616HMotor.hpp
main/HardwareManager/ConfigValidation/: GPIOConfigValidator.cpp  I2CConfigValidator.cpp  LEDCConfigValidator.cpp  WIFIConfigValidator.cpp
main/HardwareManager/ConfigValidation/Include/: GPIOConfigValidator.hpp  I2CConfigValidator.hpp  IConfigValidator.hpp  LEDCConfigValidator.hpp  WIFIConfigValidator.hpp
main/HardwareManager/Include/: HardwareConfigTypes.hpp  HardwareManager.hpp
main/HardwareManager/include/: ConfigTypes.hpp  GPIO.hpp  I2CDevice.hpp  LEDCPWM.hpp  MPU6050.hpp  NVS.hpp  WIFIController.hpp
main/HardwareManager/interface/: IGPIO.hpp  IGyroscope.hpp  IHalComponent.hpp  ILEDCTimer.hpp  IMCPWMTimer.hpp  IMPU6050.hpp  IMotor.hpp  INVS.hpp  ITempSensor.hpp  IWIFIController.hpp
main/include/: ComponentHandler.hpp  ConfigurationTask.hpp  LEDCPWMManager.hpp  Logger.hpp  MPU6050Manager.hpp  MotorControlTask.hpp  MotorDriver.hpp  PIDController.hpp  PIDTask.hpp  RuntimeConfig.hpp  SensorTask.hpp  StateMachine.hpp  TelemetryTask.hpp  WebServer.hpp  WiFiManager.hpp  mpu6050.hpp
main/interfaces/: IComponent.hpp  IComponentHandler.hpp  IConfigObserver.hpp  IMPU6050Manager.hpp  IMotorDriver.hpp  IPIDController.hpp  IRuntimeConfig.hpp  IStateMachine.hpp  ITask.hpp  IWebServer.hpp
spiffs/: config.json  index.html
